# feval_ttc

./: LICENSE.md  README.md  pyproject.toml  requirements.txt
examples/: example_MoT.py  example_available_models.py  example_bestN.py  example_compute_cost.py  example_model_switch.py  example_response_cost.py  example_self_consistency.py
feval_ttc/: __init__.py  api.py  cost_model.py  dataset_interface.py  llm_interface.py
