[project]
name = "feval_ttc"
version = "1.0.0"
authors = [
  { name="Pavel Rumiantsev", email="pavelrumyancew@yandex.ru" },
]
dependencies = [
    "pydantic>=2.10",
]
description = "FEval-TTC: Fair Evaluation Protocol for Test-Time Compute"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: OS Independent",
]
license = "ODbL-1.0"
license-files = ["LICEN[CS]E*"]
